# Copyright 2018-2020 the Deno authors. All rights reserved. MIT license.

cargo-features = ["strip"]

[workspace]
members = [
  "cli",
  "core",
  "test_plugin",
  "test_util",
  "op_crates/fetch",
  "op_crates/web",
  "op_crates/crypto",
]
exclude = ["std/hash/_wasm"]


[profile.release]
codegen-units = 1 
lto = true 
opt-level = 'z' # Optimize for size
strip = "symbols" 
debug = false 
panic = "abort" 

[profile.bench]
codegen-units = 1 
lto = true 
opt-level = 'z' # Optimize for size
