# Copyright 2018-2021 the Deno authors. All rights reserved. MIT license.

cargo-features = ["strip"]

[workspace]
resolver = "2"
members = [
  "bench_util",
  "cli",
  "core",
  "runtime",
  "test_ffi",
  "test_util",
  "ext/broadcast_channel",
  "ext/console",
  "ext/crypto",
  "ext/fetch",
  "ext/ffi",
  "ext/http",
  "ext/net",
  "ext/timers",
  "ext/url",
  "ext/web",
  "ext/webgpu",
  "ext/webidl",
  "ext/websocket",
  "ext/webstorage",
]
exclude = ["test_util/std/hash/_wasm"]

# NB: the `bench` and `release` profiles must remain EXACTLY the same.
[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = 'z' # Optimize for size
strip = "symbols" 
debug = false 
panic = "abort"
